<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp">

            <!-- Nombre de usuario -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre de usuario"
                android:textSize="16sp"
                android:textColor="@color/md_theme_onSurface"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Introduce tu nombre de usuario"
                android:backgroundTint="@color/md_theme_primary"
                android:textColor="@color/md_theme_onSurface"
                android:layout_marginBottom="16dp" />

            <!-- Correo electrónico -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Correo electrónico"
                android:textSize="16sp"
                android:textColor="@color/md_theme_onSurface"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ejemplo@correo.com"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/md_theme_primary"
                android:textColor="@color/md_theme_onSurface"
                android:layout_marginBottom="16dp" />

            <!-- Contraseña -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contraseña"
                android:textSize="16sp"
                android:textColor="@color/md_theme_onSurface"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="********"
                android:inputType="textPassword"
                android:backgroundTint="@color/md_theme_primary"
                android:textColor="@color/md_theme_onSurface"
                android:layout_marginBottom="16dp" />

            <!-- Confirmar contraseña -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirmar contraseña"
                android:textSize="16sp"
                android:textColor="@color/md_theme_onSurface"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Repite la contraseña"
                android:inputType="textPassword"
                android:backgroundTint="@color/md_theme_primary"
                android:textColor="@color/md_theme_onSurface"
                android:layout_marginBottom="24dp" />

            <!-- Botón Registrarse -->
            <Button
                android:id="@+id/btn_register"
                android:text="Registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_primary"
                android:textColor="@color/md_theme_onPrimary"
                android:layout_marginBottom="16dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
